Projetos/ACBr32_DLL/ACBr32/ACBrAACDll.pas


Function AAC_IdentPaf_Empresa_GetCNPJ(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Empresa.CNPJ;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_SetCNPJ(const aacHandle: PaacHandle; const CNPJ : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Empresa.CNPJ := CNPJ;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_GetIE(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Empresa.IE;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_SetIE(const aacHandle: PaacHandle; const IE : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Empresa.IE := IE;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_GetIM(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Empresa.IM;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_SetIM(const aacHandle: PaacHandle; const IM : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Empresa.IM := IM;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;


/////////////FIM IDENTIFICAÇÃO PAF

/////////////////////////////////FIM PROPRIEDADES DO AAC///////////////////////////////////////////////////


exports

{ Funções }
AAC_Create,
AAC_Destroy,
AAC_GetUltimoErro,

{ Propriedades do Componente }

AAC_GetNomeArquivoAux, AAC_SetNomeArquivoAux,
AAC_AtualizarValorGT, AAC_VerificarGTECF,
AAC_GetParams, AAC_SetParams,
AAC_GetChave,AAC_SetChave,
AAC_GetArqLOG, AAC_SetArqLOG,
AAC_IdentPaf_GetNumeroLaudo, AAC_IdentPaf_SetNumeroLaudo,
AAC_IdentPaf_GetVersaoER, AAC_IdentPaf_SetVersaoER,

AAC_IdentPaf_Paf_GetRealizaPreVenda,AAC_IdentPaf_Paf_SetRealizaPreVenda,
AAC_IdentPaf_Paf_GetRealizaDAVECF,AAC_IdentPaf_Paf_SetRealizaDAVECF,
AAC_IdentPaf_Paf_GetRealizaDAVNaoFiscal,AAC_IdentPaf_Paf_SetRealizaDAVNaoFiscal,
AAC_IdentPaf_Paf_GetRealizaDAVOS,AAC_IdentPaf_Paf_SetRealizaDAVOS,
AAC_IdentPaf_Paf_GetDAVConfAnexoII,AAC_IdentPaf_Paf_SetDAVConfAnexoII,
AAC_IdentPaf_Paf_GetRealizaLancamentoMesa,AAC_IdentPaf_Paf_SetRealizaLancamentoMesa,

//funcionalidades
AAC_IdentPaf_Paf_GetTipoFuncionamento,AAC_IdentPaf_Paf_SetTipoFuncionamento,
AAC_IdentPaf_Paf_GetTipoDesenvolvimento,AAC_IdentPaf_Paf_SetTipoDesenvolvimento,
AAC_IdentPaf_Paf_GetIntegracaoPafECF,AAC_IdentPaf_Paf_SetIntegracaoPafECF,
//software house
AAC_IdentPaf_Empresa_GetRazaoSocial,AAC_IdentPaf_Empresa_SetRazaoSocial,
AAC_IdentPaf_Empresa_GetCNPJ, AAC_IdentPaf_Empresa_SetCNPJ,
AAC_IdentPaf_Empresa_GetIE,AAC_IdentPaf_Empresa_SetIE,
AAC_IdentPaf_Empresa_GetIM,AAC_IdentPaf_Empresa_SetIM,
//aplicativo
AAC_IdentPaf_Paf_GetNome,AAC_IdentPaf_Paf_SetNome,
AAC_IdentPaf_Paf_GetLinguagem,AAC_IdentPaf_Paf_SetLinguagem,
AAC_IdentPaf_Paf_GetBancoDados, AAC_IdentPaf_Paf_SetBancoDados,
AAC_IdentPaf_Paf_GetSistemaOperacional,AAC_IdentPaf_Paf_SetSistemaOperacional,
AAC_IdentPaf_Paf_GetVersao, AAC_IdentPaf_Paf_SetVersao,
AAC_IdentPaf_Paf_PrincipalExe_GetNome,AAC_IdentPaf_Paf_PrincipalExe_SetNome,
AAC_IdentPaf_Paf_PrincipalExe_GetMD5,AAC_IdentPaf_Paf_PrincipalExe_SetMD5,
//especiais
AAC_IdentPaf_Paf_GetIndiceTecnicoProd,AAC_IdentPaf_Paf_SetIndiceTecnicoProd,
AAC_IdentPaf_Paf_GetBarSimilarECFRestaurante,AAC_IdentPaf_Paf_SetBarSimilarECFRestaurante,
AAC_IdentPaf_Paf_GetBarSimilarECFComum,AAC_IdentPaf_Paf_SetBarSimilarECFComum,
AAC_IdentPaf_Paf_GetBarSimilarBalanca,AAC_IdentPaf_Paf_SetBarSimilarBalanca,
AAC_IdentPaf_Paf_GetUsaImpressoraNaoFiscal,AAC_IdentPaf_Paf_SetUsaImpressoraNaoFiscal,
AAC_IdentPaf_Paf_GetDAVDiscrFormula,AAC_IdentPaf_Paf_SetDAVDiscrFormula,
//criterios por uf
AAC_IdentPaf_Paf_GetTotalizaValoresLista,AAC_IdentPaf_Paf_SetTotalizaValoresLista,
AAC_IdentPaf_Paf_GetTransfPreVenda,AAC_IdentPaf_Paf_SetTransfPreVenda,
AAC_IdentPaf_Paf_GetTransfDAV,AAC_IdentPaf_Paf_SetTransfDAV,
AAC_IdentPaf_Paf_GetRecompoeGT,AAC_IdentPaf_Paf_SetRecompoeGT,
AAC_IdentPaf_Paf_GetEmitePED,AAC_IdentPaf_Paf_SetEmitePED,
AAC_IdentPaf_Paf_GetCupomMania,AAC_IdentPaf_Paf_SetCupomMania,
AAC_IdentPaf_Paf_GetMinasLegal,AAC_IdentPaf_Paf_SetMinasLegal,


{ Métodos do Componente }
AAC_AbrirArquivo,
AAC_SalvarArquivo,
AAC_IdentPaf_ECFsAutorizados_Clear,
AAC_IdentPaf_ECFsAutorizados_New,
AAC_IdentPaf_ECFsAutorizados_Get,
AAC_IdentPaf_ECFsAutorizados_Count;



end.

